# cco

./: .gitignore  ACCEPTANCE_TESTING_COMPLETE.md  ACCEPTANCE_TEST_FINAL_REPORT.md  ACTION_PLAN.md  AGENTS.md  AGENTS_UPDATED_LIST.md  AGENT_BRIEFING_TERMINAL_INTEGRATION.md  AGENT_COPY_DELIVERABLES.md  AGENT_DEFINITIONS_DOCUMENTATION.md  AGENT_METADATA_ANALYSIS.md  AGENT_METADATA_COMPLETION_REPORT.md  AGENT_SPAWN_TEMPLATES.md  AGENT_TYPE_ROLE_MAPPING.md  AGENT_VERIFICATION_TABLE.md  ANALYSIS_SUMMARY.txt  ANALYTICS_API_REFERENCE.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  AUTO_UPDATE_DOCUMENTATION_DELIVERABLES.md  BEFORE_AFTER_SHUTDOWN_COMPARISON.md  BUILD_ERROR_ANALYSIS.md  BUILD_ERROR_ANALYSIS_INDEX.md  BUILD_OPTIMIZATION.md  BUILD_TOOLS_SETUP_MASTER_INDEX.md  CCO_LOCAL_TEST_REPORT.md  CCO_MODEL_OVERRIDE_IMPLEMENTATION.md  CCO_PROXY_ANALYSIS.md  CCO_PROXY_MODEL_REWRITE_SOLUTION.md  CCO_RELEASE_REPO_SETUP_COMPLETE.md  CCO_TESTING_GAP_ANALYSIS.md  CCO_WORKFLOW_QUICK_REFERENCE.md  CHANGELOG.md  CHANGELOG_AUTO_ALLOW_READ_DEFAULT.md  CLASSIFIER_CRITICAL_FINDINGS.md  CLASSIFIER_ENDPOINT_TEST_REPORT.md  CLASSIFIER_EXECUTIVE_BRIEFING.md  CLASSIFIER_EXECUTIVE_SUMMARY.md  CLASSIFIER_FIX_VERIFICATION_SUMMARY.txt  CLASSIFIER_QUICK_REFERENCE.md  CLASSIFIER_RETEST_REPORT.md  CLASSIFIER_RETEST_SUMMARY.md  (+185 more)
cco/: .cargo-watch.toml  .gitignore  AGENT_API_IMPLEMENTATION.md  AGENT_API_README.md  AGENT_DEFINITIONS_API.md  AGENT_DEFINITIONS_QUICK_START.md  AGENT_DETECTION_ARCHITECTURE_REVIEW.md  AGENT_MODEL_VERIFICATION_TABLE.md  AGENT_VERIFICATION_TABLE.md  API_COST_MONITOR_ARCHITECTURE.md  AUTHENTICATION_QUICK_REFERENCE.md  AUTH_INTEGRATION_EXAMPLE.md  (+218 more)
(+869 files in other folders)
