[package]
name = "cco"
version = "0.0.0"  # Placeholder - actual version is date-based (see CCO_VERSION)
edition = "2021"

[package.metadata]
# Actual CCO version using date-based format: YYYY.MM.N
display_version = "2025.11.2"

[[bin]]
name = "cco"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
semver = "1.0"
toml = "0.8"
tar = "0.4"
flate2 = "1.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
webbrowser = "1.0"
sysinfo = "0.30"
portable-pty = "0.8"
dashmap = "5.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }
libc = "0.2"

[build-dependencies]
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
